[package]
name = "rouilleftpd"
version = "0.1.0"
authors = ["Guillaume Gielly <guillaume.gielly@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.9"
shared_memory = "0.12"
thiserror = "1.0"
structopt = "0.3"
anyhow = "1.0"
chrono = "0.4"
colored = "2.0"
regex = "1"